# Theory_practice_LLM

./: .gitignore
LLM1/: MEUNIER_Lab1.md  main.ipynb  part_2.ipynb
LLM2/: .gitignore  notebook.ipynb  pyproject.toml  sent_df.json  sent_df_init.json  setup.sh
