[project]
name = "tp-embeddings-nlp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "gensim",
    "transformers",
    "torch",
    "datasets",
    "spacy",
    "nltk",
    "numpy",
    "scikit-learn",
    "scipy",
    "matplotlib",
    "seaborn",
    "jupyter",
    "en-core-web-sm",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
